# rpi-udp-stream-client

./: CMakeLists.txt  Makefile.old
app/: color_object_recognition.cpp  color_object_recognition.h  imshow_queue.cpp  imshow_queue.h  main.cpp
common_util/: common_util.h
computer_vision/: color_object_recognition.cpp  color_object_recognition.h  get_optical_flow.cpp  get_optical_flow.h  imshow_queue.cpp  pos_compensation.cpp  pos_compensation.h  shape_object_recognition.cpp  shape_object_recognition.h
ffmpeg_setup/: ffmpeg_setup.cpp  ffmpeg_setup.h
udp_setup/: udp_setup.cpp  udp_setup.h
